[package]
authors = ["Wickramaranga Abeygunawardhana <w@umstek.tk>"]
edition = "2018"
name = "edge-comments"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.10"
js-sys = "0.3.48"
url = "2.2.1"
wasm-bindgen = "0.2.71"
wasm-bindgen-futures = "0.4.21"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is   for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.web-sys]
features = ["console", "Request", "Headers", "ResponseInit", "Response"]
version = "0.3.48"

[dev-dependencies]
wasm-bindgen-test = "0.3.21"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
